--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "^0.55.4"
+    "react-native": "^0.55.4",
+    "react-native-elements": "^0.19.1",
+    "react-native-material-textfield": "^0.12.0",
+    "react-native-tabbar-bottom": "^1.0.4",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.0.2"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
